--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -1,10 +1,10 @@
-$light-color: #eee;
-$dark-color: #222;
-$primary-color: #444;
-$secondary-color: #888;
-$overlay-color: rgba(0, 0, 0, .5);
-$line-height-default: 1.4;
-$width-header-box: 420px;
+$main-color: #1755e7;
+$secondary-color: #164dcc;
+$pure-white: #fff;
+$light-white: #eee;
+$dark: #2e2e2e;
+$green-color: #00ffaa;
+$green-color-hover: #0fe29c;
 
 $light-blue-gradient: linear-gradient(45deg, rgba(8, 206, 255, 0.75), rgba(8, 24, 255, 0.75));
 $blue-gradient: linear-gradient(45deg, rgba(20, 105, 241, 0.75), rgba(42, 10, 184, 0.75));
