--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,84 +1,22 @@
-.wrapper {
-	margin: 0 auto;
-	width: 100%;
-	max-width: 1200px;
-}
+@import './variables';
 
-.white-block {
-	position: absolute;
-	height: 40px;
-	width: 60%;
-	background-color: $pure-white;
-
-	&-left {
-		bottom: -1px;
-		left: -10%;
-		transform: skew(45deg);
-	}
-
-	&-right {
-		top: 0;
-		right: -10%;
-		transform: skew(45deg);
-	}
-}
-
-.btn-special-animation {
-	position: relative;
-	transition: background-color 0.3s;
-	overflow: hidden;
-	z-index: 0;
-
-	&::before {
+.logo {
+	display: block;
+    z-index: 30;
+	width: 50px;
+	background: gray;
+	img {
 		display: block;
-		content: '';
-		position: absolute;
-		top: 0;
-		left: 0;
 		width: 100%;
-		height: 100%;
-		transform: scaleX(0);
-		transform-origin: right;
-		transition: transform 0.3s;
-		z-index: -1;
-	}
-
-	&:hover::before {
-		transform: scaleX(1);
-		transform-origin: left;
 	}
 }
 
-.section-heading {
-	position: relative;
-	margin-bottom: 2em;
-	font-size: 3rem;
-	font-weight: 300;
-	text-transform: uppercase;
-	text-align: center;
-	color: $main-color;
-	letter-spacing: 2px;
-}
-
-.section-padding {
-	padding: 6em 2em;
-}
-
-@media (min-width: 768px) {
-	.section-heading {
-		font-size: 3.6rem;
-	}
-
-	.section-padding {
-		padding: 8em 2em;
-	}
-}
-@media (min-width: 992px) {
-	.section-heading {
-		font-size: 4.8rem;
-	}
-
-	.section-padding {
-		padding: 10em 2em;
+.bars {
+	display: block;
+    z-index: 31;
+	img {
+		display: block;
+		width: 50px;
+		background: gray;
 	}
 }
