--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -2,21 +2,86 @@
 
 .logo {
 	display: block;
-    z-index: 30;
+	z-index: 30;
 	width: 50px;
-	background: gray;
 	img {
 		display: block;
 		width: 100%;
 	}
 }
 
-.bars {
-	display: block;
-    z-index: 31;
-	img {
-		display: block;
-		width: 50px;
-		background: gray;
+.burger {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	background-color: transparent;
+	cursor: pointer;
+	
+	&:focus {
+	  & > .burger__container {
+		box-shadow: 0 0 2px 2px #00ffff;
+	  }
 	}
-}
+	
+	&,
+	&__container {
+	  &:focus {
+		outline: none;
+	  }
+	}
+	
+	&__container {
+	  display: flex;
+	  align-items: center;
+	  position: relative;
+	  width: 35px;
+	  height: 30px;
+	}
+  
+	&__bars {
+	  position: absolute;
+	  width: 35px;
+	  height: 3px;
+	  background-color: $light-color;
+	  transition: transform 220ms ease-in-out;
+  
+	  &::before, &::after {
+		display: block;
+		position: absolute;
+		width: 35px;
+		height: 3px;
+		background-color: $light-color;
+		content: '';
+	  }
+  
+	  &::before {
+		top: -12px;
+		transition: top 100ms 250ms ease-in, transform 220ms ease-in-out;
+	  }
+  
+	  &::after {
+		bottom: -12px;
+		transition: bottom 100ms 250ms ease-in, 
+		  transform 220ms ease-in-out;
+	  }
+	}
+	
+	&--active {
+	  .burger__bars {
+		transform: rotate(225deg);
+		transition: transform 220ms 120ms ease-in-out;
+  
+		&::before {
+		  top: 0;
+		  transition: top 100ms ease-out;
+		}
+  
+		&::after {
+		  bottom: 0;
+		  transform: rotate(-90deg);
+		  transition: bottom 100ms ease-out, 
+			transform 220ms 120ms ease-in-out;
+		}
+	  }
+	}
+  }
