--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,3 +3,8 @@
 @import './components';
 @import './layout';
 @import './nav';
+
+main {
+    height: 1800px;
+    background: rgb(90, 112, 137);
+}
