--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -4,6 +4,7 @@
 	display: block;
 	z-index: 30;
 	width: 50px;
+	transition: .5s linear;
 	img {
 		display: block;
 		width: 100%;
@@ -16,72 +17,77 @@
 	border: 0;
 	background-color: transparent;
 	cursor: pointer;
-	
+
 	&:focus {
-	  & > .burger__container {
-		box-shadow: 0 0 2px 2px #00ffff;
-	  }
+		& > .burger__container {
+			box-shadow: 0 0 2px 2px #00ffff;
+		}
 	}
-	
+
 	&,
 	&__container {
-	  &:focus {
-		outline: none;
-	  }
+		&:focus {
+			outline: none;
+		}
 	}
-	
+
 	&__container {
-	  display: flex;
-	  align-items: center;
-	  position: relative;
-	  width: 35px;
-	  height: 30px;
+		display: flex;
+		align-items: center;
+		position: relative;
+		width: 35px;
+		height: 30px;
 	}
-  
+
 	&__bars {
-	  position: absolute;
-	  width: 35px;
-	  height: 3px;
-	  background-color: $light-color;
-	  transition: transform 220ms ease-in-out;
-  
-	  &::before, &::after {
-		display: block;
 		position: absolute;
 		width: 35px;
 		height: 3px;
 		background-color: $light-color;
-		content: '';
-	  }
-  
-	  &::before {
-		top: -12px;
-		transition: top 100ms 250ms ease-in, transform 220ms ease-in-out;
-	  }
-  
-	  &::after {
-		bottom: -12px;
-		transition: bottom 100ms 250ms ease-in, 
-		  transform 220ms ease-in-out;
-	  }
-	}
-	
-	&--active {
-	  .burger__bars {
-		transform: rotate(225deg);
-		transition: transform 220ms 120ms ease-in-out;
-  
-		&::before {
-		  top: 0;
-		  transition: top 100ms ease-out;
-		}
-  
+		transition: transform 220ms ease-in-out;
+
+		&::before,
 		&::after {
-		  bottom: 0;
-		  transform: rotate(-90deg);
-		  transition: bottom 100ms ease-out, 
-			transform 220ms 120ms ease-in-out;
+			display: block;
+			position: absolute;
+			width: 35px;
+			height: 3px;
+			background-color: $light-color;
+			content: '';
 		}
-	  }
+
+		&::before {
+			top: -12px;
+			transition: top 100ms 250ms ease-in, transform 220ms ease-in-out;
+		}
+
+		&::after {
+			bottom: -12px;
+			transition: bottom 100ms 250ms ease-in, transform 220ms ease-in-out;
+		}
 	}
-  }
+
+	&--active {
+		.burger__bars {
+			transform: rotate(225deg);
+			transition: transform 220ms 120ms ease-in-out;
+
+			&::before {
+				top: 0;
+				transition: top 100ms ease-out;
+			}
+
+			&::after {
+				bottom: 0;
+				transform: rotate(-90deg);
+				transition: bottom 100ms ease-out, transform 220ms 120ms ease-in-out;
+			}
+		}
+	}
+}
+
+@media (min-width: 992px) {
+	.burger {
+		display: none;
+	}
+}
