--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,16 +1,16 @@
 @import './variables';
 
 .nav-main {
-    background-color: $primary-color;
+	position: fixed;
+	width: 100%;
+	background-color: $primary-color;
 	.container {
 		padding: 2em;
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		border: 1px solid rgb(7, 105, 204);
 	}
 	&__list {
-		background-color: $secondary-color;
 		position: fixed;
 		top: 0;
 		left: 0;
@@ -20,24 +20,91 @@
 		justify-content: center;
 		width: 100%;
 		height: 100vh;
-        transform: translateX(100%);
-        transition: .5s ease-in-out;
+		transform: translateX(100%);
+		transition: 0.5s ease-in-out;
+		background-color: #45867f;
 		li {
 			margin-bottom: 2em;
 			&:last-child {
 				margin-bottom: 0;
+				background-color: $dark-color;
 			}
 		}
-        &--active {
-            transform: translateX(0);
-        }
+		&--active {
+			transform: translateX(0);
+		}
 	}
 	&__item {
-		border: 1px solid #14141455;
+		position: relative;
 		display: inline-block;
 		padding: 0.5em 1em;
 		color: $light-color;
 		font-size: 2rem;
 		text-transform: uppercase;
+		transition: width .5s ease, height .5s ease;
+	}
+	&__item::before,
+	&__item::after {
+		content: '';
+		position: absolute;
+		width: 0;
+		height: 0;
+		transition: width .5s ease, height .5s ease;
+	}
+	&__item::before {
+		top: -2px;
+		left: -4px;
+		border-top: 0;
+		border-left: 0;
+	}
+	&__item::after {
+		bottom: -2px;
+		right: -4px;
+		border-bottom: 0;
+		border-right: 0;
+	}
+	&__item:hover::before,
+	&__item:hover::after {
+		width: 50px;
+		height: 50%;
+	}
+	&__item:hover::before {
+		border-top: 2px solid $light-color;
+		border-left: 2px solid $light-color;
+	}
+	&__item:hover::after {
+		border-bottom: 2px solid $light-color;
+		border-right: 2px solid $light-color;
+	}
+}
+
+@media (min-width: 992px) {
+	.nav-main {
+		background-color: $primary-color;
+		.container {
+			padding: 2em;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+		}
+		.nav-main__container {
+			transition: padding .5s linear;
+		}
+		&__list {
+			position: relative;
+			display: flex;
+			justify-content: end;
+			flex-direction: row;
+			height: 100%;
+			transform: translateX(0);
+			background-color: transparent;
+			li {
+				margin-bottom: 0;
+			}
+		}
+		&__item {
+			font-size: 1.6rem;
+			transition: font-size .5s linear;
+		}
 	}
 }
