--- a/css/main.css
+++ b/css/main.css
@@ -13,11 +13,28 @@ html {
 
 body {
   font-family: "Raleway", sans-serif;
-  background-color: silver;
+  font-size: 1.6rem;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Gluten", cursive;
+}
+
+h1 {
+  font-size: 2.8rem;
+}
+
+h2 {
+  font-size: 2.4rem;
+}
+
+h3 {
+  font-size: 1.8rem;
 }
 
 a {
@@ -34,6 +51,17 @@ button {
   background: none;
   border: 0;
   cursor: pointer;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .logo {
@@ -120,6 +148,7 @@ button {
   position: fixed;
   width: 100%;
   background-color: #444;
+  z-index: 200;
 }
 .nav-main .container {
   padding: 2em;
@@ -222,7 +251,26 @@ button {
     transition: font-size 0.5s linear;
   }
 }
-main {
-  height: 1800px;
-  background: rgb(90, 112, 137);
+.header-main {
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #888;
+}
+
+.offer {
+  background-color: #444;
+}
+
+.realizations {
+  background-color: #888;
+}
+
+.price {
+  background-color: #444;
+}
+
+.contact {
+  background-color: #888;
 }/*# sourceMappingURL=main.css.map */
