--- a/sass/_styles-dafault.scss
+++ b/sass/_styles-dafault.scss
@@ -14,12 +14,27 @@ html {
 }
 
 body {
-    font-family: 'Raleway', sans-serif;
-	background-color: silver;
+	font-family: 'Raleway', sans-serif;
+	font-size: 1.6rem;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Gluten', cursive;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: 'Gluten', cursive;
+}
+
+h1 {
+	font-size: 2.8rem;
+}
+h2 {
+	font-size: 2.4rem;
+}
+h3 {
+	font-size: 1.8rem;
 }
 
 a {
