--- a/sass/components/_burger.scss
+++ b/sass/components/_burger.scss
@@ -1,26 +1,4 @@
-@import './variables';
-
-.overlay {
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	z-index: 100;
-	background-color: $overlay-color;
-}
-
-.logo {
-	display: block;
-	z-index: 30;
-	width: 50px;
-	transition: 0.5s linear;
-	img {
-		display: block;
-		width: 100%;
-	}
-}
+// Burger styles
 
 .burger {
 	margin: 0;
