--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -9,7 +9,7 @@
 	text-align: center;
 	background-color: $primary-color;
 	color: $light-color;
-	border-radius: 4px;
+	border-radius: $default-rounding;
 	&:last-child {
 		margin-bottom: 0;
 	}
