--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,7 +1,8 @@
 // Fotter styles
 
 .footer {
-	background-color: $secondary-color;
+	background-color: $dark-color;
+	color: $light-color;
 	&__copy {
 		padding: 2rem 0;
 	}
