--- a/sass/layout/_offer.scss
+++ b/sass/layout/_offer.scss
@@ -1,7 +1,7 @@
 // Offer styles
 
 .offer {
-	background-color: $primary-color;
+	background-color: $light-color;
 	ul {
 		// line-height: 3em;
 		li {
