--- a/sass/layout/_price.scss
+++ b/sass/layout/_price.scss
@@ -1,7 +1,7 @@
 //  Price styles
 
 .price {
-	background-color: $primary-color;
+	background-color: $light-color;
 	li {
 		list-style: inside;
 		margin-bottom: 2em;
