--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ h3 {
 
 a {
   text-decoration: none;
-  color: #444;
+  color: #ba824a;
   cursor: pointer;
 }
 
@@ -71,79 +71,6 @@ button {
   margin-bottom: 1em;
 }
 
-.header {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  background: #888 url(../img/page/particles-7104407_640.jpg) center;
-  background-size: cover;
-  color: #eee;
-}
-.header .container p {
-  position: relative;
-  z-index: 150;
-  margin-bottom: 2em;
-  line-height: 1.5;
-}
-.header .header__heading {
-  margin: 4em 0 1em;
-  position: relative;
-  z-index: 151;
-}
-
-.offer {
-  background-color: #444;
-}
-.offer ul li {
-  list-style: inside;
-  margin-bottom: 2em;
-  line-height: 1.5;
-}
-
-.realizations {
-  background-color: #888;
-}
-.realizations__item {
-  background-color: #eee;
-  margin-bottom: 2em;
-  padding: 1em;
-}
-.realizations__item h3 {
-  margin-bottom: 1em;
-  line-height: 1.2;
-}
-.realizations__item p {
-  margin-bottom: 1em;
-}
-.realizations__item img {
-  width: 100%;
-}
-
-.price {
-  background-color: #444;
-}
-.price li {
-  list-style: inside;
-  margin-bottom: 2em;
-  line-height: 1.5;
-}
-
-.contact {
-  padding: 6em 0 2em;
-  line-height: 1.5;
-}
-.contact p {
-  margin-bottom: 1em;
-}
-
-.footer {
-  background-color: #888;
-}
-.footer__copy {
-  padding: 2rem 0;
-}
-
 .overlay {
   position: absolute;
   top: 0;
@@ -159,7 +86,7 @@ button {
   display: block;
   z-index: 30;
   width: 50px;
-  transition: 0.5s linear;
+  transition: 0.2s ease-in-out;
 }
 .logo img {
   display: block;
@@ -169,14 +96,17 @@ button {
 .nav {
   position: fixed;
   width: 100%;
-  background-color: #444;
+  background-color: #349bba;
   z-index: 200;
 }
 .nav .container {
-  padding: 2em;
+  padding: 1.5em;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+.nav .nav__container {
+  transition: padding 0.2s ease-in-out;
 }
 .nav__list {
   position: fixed;
@@ -189,14 +119,14 @@ button {
   width: 100%;
   height: 100vh;
   transform: translateX(100%);
-  transition: 0.5s ease-in-out;
-  background-color: #45867f;
+  transition: transform 0.2s ease-in-out;
+  background-color: #349bba;
 }
 .nav__list li {
-  margin-bottom: 2em;
+  margin: 0 1em 2em 0;
 }
 .nav__list li:last-child {
-  margin-bottom: 0;
+  margin: 0;
   background-color: #222;
 }
 .nav__list--active {
@@ -209,14 +139,14 @@ button {
   color: #eee;
   font-size: 2rem;
   text-transform: uppercase;
-  transition: width 0.5s ease, height 0.5s ease;
+  transition: width 0.2s ease-in-out, height 0.2s ease-in-out;
 }
 .nav__item::before, .nav__item::after {
   content: "";
   position: absolute;
   width: 0;
   height: 0;
-  transition: width 0.5s ease, height 0.5s ease;
+  transition: width 0.2s ease-in-out, height 0.2s ease-in-out;
 }
 .nav__item::before {
   top: -2px;
@@ -245,16 +175,13 @@ button {
 
 @media (min-width: 992px) {
   .nav {
-    background-color: #444;
+    background-color: #349bba;
   }
   .nav .container {
     padding: 2em;
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
-  .nav .nav__container {
-    transition: padding 0.5s linear;
   }
   .nav__list {
     position: relative;
@@ -270,7 +197,7 @@ button {
   }
   .nav__item {
     font-size: 1.6rem;
-    transition: font-size 0.5s linear;
+    transition: font-size 0.2s ease-in-out;
   }
 }
 .burger {
@@ -299,14 +226,16 @@ button {
   height: 3px;
   background-color: #eee;
   transition: transform 220ms ease-in-out;
+  border-radius: 2px;
 }
 .burger__bars::before, .burger__bars::after {
   display: block;
   position: absolute;
   width: 35px;
   height: 3px;
-  background-color: #eee;
   content: "";
+  background-color: #eee;
+  border-radius: 2px;
 }
 .burger__bars::before {
   top: -12px;
@@ -342,10 +271,84 @@ button {
   margin-bottom: 1em;
   padding: 1em;
   text-align: center;
-  background-color: #444;
+  background-color: #349bba;
   color: #eee;
-  border-radius: 4px;
+  border-radius: 0.25em;
 }
 .btn:last-child {
   margin-bottom: 0;
+}
+
+.header {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: #ba824a url(../img/page/particles-7104407_640.jpg) center;
+  background-size: cover;
+  color: #eee;
+}
+.header .container p {
+  position: relative;
+  z-index: 150;
+  margin-bottom: 2em;
+  line-height: 1.5;
+}
+.header .header__heading {
+  margin: 5em 0 1em;
+  position: relative;
+  z-index: 151;
+}
+
+.offer {
+  background-color: #eee;
+}
+.offer ul li {
+  list-style: inside;
+  margin-bottom: 2em;
+  line-height: 1.5;
+}
+
+.realizations {
+  background-color: #349bba;
+}
+.realizations__item {
+  background-color: #eee;
+  margin-bottom: 2em;
+  padding: 1em;
+}
+.realizations__item h3 {
+  margin-bottom: 1em;
+  line-height: 1.2;
+}
+.realizations__item p {
+  margin-bottom: 1em;
+}
+.realizations__item img {
+  width: 100%;
+}
+
+.price {
+  background-color: #eee;
+}
+.price li {
+  list-style: inside;
+  margin-bottom: 2em;
+  line-height: 1.5;
+}
+
+.contact {
+  padding: 6em 0 2em;
+  line-height: 1.5;
+}
+.contact p {
+  margin-bottom: 1em;
+}
+
+.footer {
+  background-color: #222;
+  color: #eee;
+}
+.footer__copy {
+  padding: 2rem 0;
 }/*# sourceMappingURL=main.css.map */
