--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -6,10 +6,13 @@
 	background-color: $primary-color;
 	z-index: 200;
 	.container {
-		padding: 2em;
+		padding: 1.5em;
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
+	}
+	.nav__container {
+		transition: padding .2s ease-in-out;
 	}
 	&__list {
 		position: fixed;
@@ -22,13 +25,14 @@
 		width: 100%;
 		height: 100vh;
 		transform: translateX(100%);
-		transition: 0.5s ease-in-out;
-		background-color: #45867f;
+		transition: transform .2s ease-in-out;
+		background-color: $primary-color;
 		li {
-			margin-bottom: 2em;
+			margin: 0 1em 2em 0;
 			&:last-child {
-				margin-bottom: 0;
+				margin: 0;
 				background-color: $dark-color;
+				// border-radius: $default-rounding;
 			}
 		}
 		&--active {
@@ -38,11 +42,11 @@
 	&__item {
 		position: relative;
 		display: inline-block;
-		padding: 0.5em 1em;
+		padding: .5em 1em;
 		color: $light-color;
 		font-size: 2rem;
 		text-transform: uppercase;
-		transition: width .5s ease, height .5s ease;
+		transition: width .2s ease-in-out, height .2s ease-in-out;
 	}
 	&__item::before,
 	&__item::after {
@@ -50,7 +54,7 @@
 		position: absolute;
 		width: 0;
 		height: 0;
-		transition: width .5s ease, height .5s ease;
+		transition: width .2s ease-in-out, height .2s ease-in-out;
 	}
 	&__item::before {
 		top: -2px;
@@ -88,9 +92,6 @@
 			justify-content: space-between;
 			align-items: center;
 		}
-		.nav__container {
-			transition: padding .5s linear;
-		}
 		&__list {
 			position: relative;
 			display: flex;
@@ -105,7 +106,7 @@
 		}
 		&__item {
 			font-size: 1.6rem;
-			transition: font-size .5s linear;
+			transition: font-size .2s ease-in-out;
 		}
 	}
 }
