--- a/sass/components/_other-components.scss
+++ b/sass/components/_other-components.scss
@@ -15,7 +15,7 @@
 	display: block;
 	z-index: 30;
 	width: 50px;
-	transition: .5s linear;
+	transition: .2s ease-in-out;
 	img {
 		display: block;
 		width: 100%;
