--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -2,9 +2,9 @@
 
 $light-color: #eee;
 $dark-color: #222;
-$primary-color: #444;
-$secondary-color: #888;
+$primary-color: #349bba;
+$secondary-color: #ba824a;
 $overlay-color: rgba(0, 0, 0, .5);
 
-// background: rgb(90, 112, 137);
-// background-color: #45867f;
+$default-rounding: .25em;
+
