--- a/sass/base/_default.scss
+++ b/sass/base/_default.scss
@@ -24,7 +24,7 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: 'Gluten', cursive;
+	font-family: 'Montserrat', sans-serif;
 }
 
 h1 {
@@ -36,10 +36,13 @@ h2 {
 h3 {
 	font-size: 1.8rem;
 }
+h4, h5, h6 {
+	font-size: 1.6rem;
+}
 
 a {
 	text-decoration: none;
-	color: $secondary-color;
+	color: $primary-color;
 	cursor: pointer;
 }
 
