--- a/sass/base/_setting.scss
+++ b/sass/base/_setting.scss
@@ -1,8 +1,8 @@
 // Setting styles
 
 .container {
-    margin: 0 auto;
-    padding: 0 2em;
+	margin: 0 auto;
+	padding: 0 2em;
 	width: 100%;
 	max-width: 1200px;
 }
@@ -15,7 +15,26 @@
 }
 
 .section {
-    &__heading {
-        margin-bottom: 1em;
+	&__heading {
+		margin-bottom: 1em;
+	}
+}
+
+@media (max-width: 320px) {
+	.container {
+		padding: 0 1em;
+	}
+	.header,
+	.offer,
+	.realizations,
+	.price {
+		padding: 2em 0;
+	}
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+	.header {
+        padding: 12em 0;
     }
 }
