--- a/sass/components/_other-components.scss
+++ b/sass/components/_other-components.scss
@@ -12,9 +12,12 @@
 }
 
 .logo {
-	display: block;
+	display: flex;
+	align-items: center;
+	font-size: 2.8rem;
 	z-index: 30;
 	width: 50px;
+	color: $light-color;
 	transition: .2s ease-in-out;
 	img {
 		display: block;
