--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -15,10 +15,34 @@
 			margin-bottom: 2em;
 			line-height: 1.5;
 		}
+		.btn {
+			margin-bottom: 1.5em;
+		}
 	}
-    .header__heading {
-        margin: 5em 0 1em;
-        position: relative;
-        z-index: 151;
-    }
+	.header__heading {
+		margin-bottom: 1em;
+		position: relative;
+		z-index: 151;
+	}
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+	.header {
+		.btn {
+			display: inline-block;
+			margin-right: 1.5em;
+		}
+		p {
+			max-width: 75%;
+		}
+	}
+}
+
+@media (min-width: 992px) {
+	.header {
+		p {
+			max-width: 50%;
+		}
+	}
 }
