--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,9 +1,17 @@
 // Fotter styles
 
 .footer {
+	position: relative;
 	background-color: $dark-color;
 	color: $light-color;
 	&__copy {
 		padding: 2rem 0;
 	}
+}
+
+.footer::after {
+	@include divider-section;
+	transform: skewX(45deg);
+	right: -60%;
+	top: -10px;
 }
