--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ html {
 body {
   font-family: "Raleway", sans-serif;
   font-size: 1.6rem;
+  overflow-x: hidden;
 }
 
 h1,
@@ -120,7 +121,7 @@ button {
   position: fixed;
   width: 100%;
   background-color: #349bba;
-  z-index: 200;
+  z-index: 205;
 }
 .nav .container {
   padding: 1.5em;
@@ -333,6 +334,18 @@ button {
   z-index: 151;
 }
 
+.header::after {
+  position: absolute;
+  bottom: -1px;
+  width: 100%;
+  height: 40px;
+  content: "";
+  background-color: #eee;
+  z-index: 200;
+  left: -60%;
+  transform: skewX(45deg);
+}
+
 @media (min-width: 768px) {
   .header .btn {
     display: inline-block;
@@ -348,6 +361,7 @@ button {
   }
 }
 .offer {
+  position: relative;
   background-color: #eee;
 }
 .offer ul li {
@@ -359,7 +373,21 @@ button {
   margin-bottom: 0;
 }
 
+.offer::after {
+  position: absolute;
+  bottom: -1px;
+  width: 100%;
+  height: 40px;
+  content: "";
+  background-color: #eee;
+  z-index: 200;
+  transform: skewX(-45deg);
+  left: -60%;
+  bottom: -40px;
+}
+
 .realizations {
+  position: relative;
   background-color: #349bba;
 }
 .realizations__item {
@@ -380,6 +408,19 @@ button {
 }
 .realizations__item p {
   padding: 0 1em 1em;
+}
+
+.realizations::after {
+  position: absolute;
+  bottom: -1px;
+  width: 100%;
+  height: 40px;
+  content: "";
+  background-color: #eee;
+  z-index: 200;
+  transform: skewX(-45deg);
+  right: -60%;
+  bottom: -10px;
 }
 
 @media (min-width: 768px) {
@@ -430,9 +471,23 @@ button {
   }
 }
 .footer {
+  position: relative;
   background-color: #222;
   color: #eee;
 }
 .footer__copy {
   padding: 2rem 0;
+}
+
+.footer::after {
+  position: absolute;
+  bottom: -1px;
+  width: 100%;
+  height: 40px;
+  content: "";
+  background-color: #eee;
+  z-index: 200;
+  transform: skewX(45deg);
+  right: -60%;
+  top: -10px;
 }/*# sourceMappingURL=main.css.map */
