--- a/sass/partials/_mixins.scss
+++ b/sass/partials/_mixins.scss
@@ -4,3 +4,14 @@
     transition-duration: .2s;
     transition-timing-function: ease-in-out;
 }
+
+@mixin divider-section {
+    position: absolute;
+    bottom: -1px;
+	width: 100%;
+	height: 40px;
+	content: '';
+	background-color: $light-color;
+	z-index: 200;
+}
+
