--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -28,8 +28,8 @@
 
 .header::after {
 	@include divider-section;
-	left: -60%;
  	transform: skewX(45deg);
+	left: -40px;
 }
 
 // Medium devices (tablets, 768px and up)
