--- a/sass/layout/_realizations.scss
+++ b/sass/layout/_realizations.scss
@@ -2,7 +2,7 @@
 
 .realizations {
 	position: relative;
-	
+	overflow: hidden;
 	background-color: $primary-color;
 	&__item {
 		background-color: $light-color;
@@ -28,8 +28,8 @@
 .realizations::after {
 	@include divider-section;
 	transform: skewX(-45deg);
-    right: -60%;
-    bottom: -10px;
+    right: -40px;
+	bottom: -10px;
 }
 
 // Medium devices (tablets, 768px and up)
