--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -3,7 +3,7 @@
 .nav {
 	position: fixed;
 	width: 100%;
-	background-color: $primary-color;
+	background-image: $primary-gradient;
 	z-index: 205;
 	.container {
 		padding: 1.5em;
