--- a/sass/layout/_realizations.scss
+++ b/sass/layout/_realizations.scss
@@ -1,7 +1,7 @@
 // Realizations styles
 
 .realizations {
-	background-color: $primary-color;
+	background-image: $primary-gradient;
 	&__item {
 		background-color: $light-color;
 		margin-bottom: 2em;
