--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -2,8 +2,8 @@
 
 $light-color: #eee;
 $dark-color: #222;
-$primary-color: rgb(23, 159, 237);
-$secondary-color: rgb(18,134,201);
+$primary-color: #179fed;
+$secondary-color: #106CA1;
 $overlay-color: rgba(0, 0, 0, .5);
 
 $primary-gradient: linear-gradient(45deg, $primary-color, $secondary-color);
