--- a/css/main.css
+++ b/css/main.css
@@ -84,13 +84,13 @@ button {
 }
 
 .nav {
-  position: fixed;
-  width: 100%;
+  position: sticky;
+  top: 0;
   background-image: linear-gradient(45deg, #179fed, #106CA1);
   z-index: 205;
 }
 .nav .container {
-  padding: 1.5em;
+  padding: 1.5em 2em;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -176,7 +176,7 @@ button {
     background-color: #179fed;
   }
   .nav .container {
-    padding: 1.5em;
+    padding: 1.5em 2em;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -307,11 +307,6 @@ button {
     padding: 2em 0;
   }
 }
-@media (min-width: 992px) {
-  .header {
-    padding: 12em 0;
-  }
-}
 .header {
   position: relative;
   display: flex;
@@ -346,6 +341,9 @@ button {
   }
 }
 @media (min-width: 992px) {
+  .header {
+    padding: 12em 0;
+  }
   .header p {
     max-width: 50%;
   }
