--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -1,12 +1,12 @@
 // Navigation style
 
 .nav {
-	position: fixed;
-	width: 100%;
+	position: sticky;
+	top: 0;
 	background-image: $primary-gradient;
 	z-index: 205;
 	.container {
-		padding: 1.5em;
+		padding: 1.5em 2em;
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
@@ -90,7 +90,7 @@
 	.nav {
 		background-color: $primary-color;
 		.container {
-			padding: 1.5em;
+			padding: 1.5em 2em;
 			display: flex;
 			justify-content: space-between;
 			align-items: center;
