Modification sass directories

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,4 @@
-@import './partials/partials';
-@import './base/base';
+@import './core/core';
 @import './components/components';
 @import './layout/layout';
 
